@@ -28,8 +28,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
-#include <config.h>
-
+#include "config.h"
 #include "HTMLInputElement.h"
 
 #include "V8Binding.h"
@@ -45,9 +44,7 @@ ACCESSOR_GETTER(HTMLInputElementSelectionStart)
     HTMLInputElement* imp = V8Proxy::DOMWrapperToNode<HTMLInputElement>(holder);
 
     if (!imp->canHaveSelection()) {
-        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR,
-            "Accessing selectionStart on an input element that "
-            "cannot have a selection.");
+        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, "Accessing selectionStart on an input element that cannot have a selection.");
         return v8::Undefined();
     }
 
@@ -62,9 +59,7 @@ ACCESSOR_SETTER(HTMLInputElementSelectionStart)
     HTMLInputElement* imp = V8Proxy::DOMWrapperToNode<HTMLInputElement>(holder);
 
     if (!imp->canHaveSelection()) {
-        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, 
-            "Accessing selectionStart on an input element that "
-            "cannot have a selection.");
+        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, "Accessing selectionStart on an input element that cannot have a selection.");
         return;
     }
     imp->setSelectionStart(value->Int32Value());
@@ -77,9 +72,7 @@ ACCESSOR_GETTER(HTMLInputElementSelectionEnd)
     HTMLInputElement* imp = V8Proxy::DOMWrapperToNode<HTMLInputElement>(holder);
 
     if (!imp->canHaveSelection()) {
-        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR,
-            "Accessing selectionEnd on an input element that "
-            "cannot have a selection.");
+        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, "Accessing selectionEnd on an input element that cannot have a selection.");
         return v8::Undefined();
     }
 
@@ -94,9 +87,7 @@ ACCESSOR_SETTER(HTMLInputElementSelectionEnd)
     HTMLInputElement* imp = V8Proxy::DOMWrapperToNode<HTMLInputElement>(holder);
 
     if (!imp->canHaveSelection()) {
-        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR,
-            "Accessing selectionEnd on an input element that "
-            "cannot have a selection.");
+        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, "Accessing selectionEnd on an input element that cannot have a selection.");
         return;
     }
     imp->setSelectionEnd(value->Int32Value());
@@ -109,9 +100,7 @@ CALLBACK_FUNC_DECL(HTMLInputElementSetSelectionRange)
     HTMLInputElement* imp = V8Proxy::DOMWrapperToNode<HTMLInputElement>(holder);
 
     if (!imp->canHaveSelection()) {
-        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR,
-            "Calling setSelectionRange on an input element that "
-            "cannot have a selection.");
+        V8Proxy::ThrowError(V8Proxy::TYPE_ERROR, "Calling setSelectionRange on an input element that cannot have a selection.");
         return v8::Undefined();
     }
     int start = args[0]->Int32Value();
